retirando post de publicado

--- a/_posts/2015-07-31-forca.markdown
+++ b/_posts/2015-07-31-forca.markdown
@@ -4,6 +4,7 @@ title:  "Força"
 date:   2015-07-31 22:30:59 -0200
 categories: [texto]
 tags: [texto]
+published: false
 ---
 Volta e meia ouço alguém falar sobre a força que algumas pessoas tem, o quão forte alguém é. Geralmente falam disso de pessoas que parecem inquebráveis e eu não concordo com essa visão.
 
